2021-02-15  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed build on old compilers by adhering more strictly to C99.
	* Released 1.15.1

2021-02-14  Martin Pärtel <martin dot partel at gmail dot com>

	* Support for libfuse3 - huge thanks to @McBane87 (PR #95)
	* Released 1.15.0

2021-01-24  Martin Pärtel <martin dot partel at gmail dot com>

	* Non-zero exit code when unable to chdir into source dir (issue #93).
	* Pass through "-o fsname" to FUSE (issue #94).
	* Released 1.14.9

2020-09-23  Martin Pärtel <martin dot partel at gmail dot com>

	* Added missing include for "sys/file.h".
	* Added flock copy-pasta needed by XCode 12 (issue #88).
	* Released 1.14.8

2020-05-13  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed missing newlines bug with --map-passwd and --map-group
	  (my fault).
	* Released 1.14.7

2020-05-10  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --map-passwd and --map-group (PR #85 by Cybso@, thanks!)
	* Released 1.14.6

2020-04-13  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed tests with Ruby 2.7.1 or newer.
	* Released 1.14.5

2020-03-22  Martin Pärtel <martin dot partel at gmail dot com>

	* Defined _DARWIN_BETTER_REALPATH to get a non-broken realpath() on Catalina (issue #83).
	* Released 1.14.4

2020-02-12  Martin Pärtel <martin dot partel at gmail dot com>

	* Added --fuse-version.

2020-01-08  Martin Pärtel <martin dot partel at gmail dot com>

	* Fixed build with -fno-common, which is the default in GCC 10 (PR #81, thanks jengelh@!).
	* Released 1.14.3

2019-12-21  Martin Pärtel <martin dot partel at gmail dot com>

	* No longer check that numeric UIDs and GIDs exist, since /etc/passwd etc are not always available (issue #79).
	* Released 1.14.2

2019-06-26  Martin Pärtel <martin dot partel at gmail dot com>

	* Resolve symlinks in readdir() so correct attributes are returned (issue #76).
	* Released 1.14.1

2019-04-29  Martin Pärtel <martin dot partel at gmail dot com>
